[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
actix-cors = "0.6.4"
argon2 = "0.5.2"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
futures-util = "0.3.24"


actix-rt = "2.9.0"
lazy_static = "1.4.0"
envfile = "0.2.1"

rust-crypto = "0.2.36"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]